1. Enable leancloud visit counter. 2. Add Zephyr page.
Signed-off-by: Eason <eason@weenas.com>

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -690,15 +690,15 @@ cnzz_siteid:
 # AppID and AppKey are recommended to be the same as valine's for counter compatibility.
 # Do not enable both `valine.visitor` and `leancloud_visitors`.
 leancloud_visitors:
-  enable: false
-  app_id: # <your app id>
-  app_key: # <your app key>
+  enable: true
+  app_id: lPiKCTXG3hk0b9mNat5430KK-gzGzoHsz # <your app id>
+  app_key: LVcfuoUtq8S7qc7aCDNuFPSE # <your app key>
   # Required for apps from CN region
   server_url: # <your server url>
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
   # If you don't care about security in leancloud counter and just want to use it directly
   # (without hexo-leancloud-counter-security plugin), set `security` to `false`.
-  security: true
+  security: false
 
 # Another tool to show number of visitors to each article.
 # Visit https://console.firebase.google.com/u/0/ to get apiKey and projectId.
