--- a/_config.next.yml
+++ b/_config.next.yml
@@ -118,9 +118,9 @@ darkmode: true
 menu:
   home: / || fa fa-home
   #about: /about/ || fa fa-user
-  #tags: /tags/ || fa fa-tags
+  tags: /tags/ || fa fa-tags
   categories: /categories/ || fa fa-th
-  archives: /archives/ || fa fa-archive
+  #archives: /archives/ || fa fa-archive
   #schedule: /schedule/ || fa fa-calendar
   #sitemap: /sitemap.xml || fa fa-sitemap
   #commonweal: /404/ || fa fa-heartbeat
@@ -139,8 +139,8 @@ menu_settings:
 
 sidebar:
   # Sidebar Position.
-  #position: left
-  position: right
+  position: left
+  #position: right
 
   # Manual define the sidebar width. If commented, will be default for:
   # Muse | Mist: 320
@@ -616,7 +616,7 @@ valine:
   appkey: LVcfuoUtq8S7qc7aCDNuFPSE #appkey
   notify: false # Mail notifier
   verify: true # Verification code
-  placeholder: 留言区 # Comment box placeholder
+  placeholder: 请留下您的足迹 # Comment box placeholder
   avatar: mm # Gravatar style
   guest_info: nick,mail # Custom comment header
   pageSize: 10 # Pagination size
@@ -740,7 +740,7 @@ algolia_search:
 # Local Search
 # Dependencies: https://github.com/theme-next/hexo-generator-searchdb
 local_search:
-  enable: false
+  enable: true
   # If auto, trigger search by changing input.
   # If manual, trigger search by pressing enter key or search button.
   trigger: auto
